# app/Http/Controllers/LeaveTypeController.php
@@ -67,10 +67,8 @@ class LeaveTypeController extends Controller
      *            @OA\Schema(
      *               type="object",
      *               required={},
-     *               @OA\Property(property="employee_id", type="text"),
      *                @OA\Property(property="days", type="text"),
      *                @OA\Property(property="leave_type", type="text"),
-     *               @OA\Property(property="create_at", type="text"),
      *               @OA\Property(property="status", type="text"),
      *            ),
      *        ),
@@ -93,21 +91,15 @@ class LeaveTypeController extends Controller
         try {
 
             $rules = [
-
-                'employee_id' => 'required',
                 'leave_type' => 'required',
                 'days' => 'required',
-                'create_at' => 'required',
                 'status' => 'required',
                 // Add validation rules for other fields here
             ];
 
             $messages = [
-
-                'employee_id.required' => 'The employee_id field is required',
                 'leave_type.required' => 'The leave_type field is required',
                 'days.required' => 'The days field is required',
-                'create_at.required' => 'The create_at field is required',
                 'status.required' => 'The status field is required',
                 // Add custom error messages for other fields if needed
             ];
@@ -119,10 +111,8 @@ class LeaveTypeController extends Controller
             }
 
             $leaveType = LeaveType::create([
-                'employee_id' => $request->employee_id,
                 'leave_type' => $request->leave_type,
                 'days' => $request->days,
-                'create_at' => $request->create_at,
                 'status' => $request->status,
             ]);
 
